Final CSS tweak

--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -7,11 +7,13 @@ a {
 }
 
 /* Section-specific underline treatments */
-#prerequisites li > label a:hover,
-#whats-next ul li a:hover,
-div[id^="fn"] > p > a:hover,
-#submit-feedback ol li p a:hover,
-#connect-with-us ul li > a:hover {
+div[id^="fn"] a:hover,
+#connect-with-us a:hover,
+#prerequisites a:hover,
+#supported-model-types a:hover,
+#supported-modeling-libraries-and-other-tools a:hover,
+#submit-feedback a:hover,
+#whats-next a:hover:not(.quarto-grid-link) {
   text-decoration: underline 2px solid #083E44 !important;
 }
 
