Basic version: Improve navigation for Python API and Public REST API (#966)
* Apply the basic fixes we agreed on

* Remove a:hover experiment

* Update .gitignore

* Underline specific links only

* Address review comments from Beck

* Final CSS tweak

--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -3,12 +3,18 @@
 /* Base link styles */
 a {
   color: #DE257E;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
-a:hover {
-  text-decoration: underline 2px solid #083E44;
-  /* text-underline-offset: 6px; */
+/* Section-specific underline treatments */
+div[id^="fn"] a:hover,
+#connect-with-us a:hover,
+#prerequisites a:hover,
+#supported-model-types a:hover,
+#supported-modeling-libraries-and-other-tools a:hover,
+#submit-feedback a:hover,
+#whats-next a:hover:not(.quarto-grid-link) {
+  text-decoration: underline 2px solid #083E44 !important;
 }
 
 /* Special link hover states */
