--- a/site/training/assets/training.css
+++ b/site/training/assets/training.css
@@ -6,6 +6,17 @@ a:hover {
     text-decoration: underline 2px solid #042426;
   }  
 
+/* Section-specific underline treatments */
+div[id^="fn"] a:hover,
+#connect-with-us a:hover,
+#prerequisites a:hover,
+#supported-model-types a:hover,
+#supported-modeling-libraries-and-other-tools a:hover,
+#submit-feedback a:hover,
+#whats-next a:hover:not(.quarto-grid-link) {
+  text-decoration: underline 2px solid #083E44 !important;
+}
+  
 .training-hero {
   position: relative;
   margin-top: -50px;
