--- a/site/theme.scss
+++ b/site/theme.scss
@@ -67,4 +67,5 @@ $mermaid-label-fg-color: #36454F;
 @import 'assets/styles/termsfeed';
 @import 'assets/styles/buttons';
 @import 'assets/styles/links';
+@import 'assets/styles/pagination';
 
