Training: Customizing your model inventory > Customize document templates

--- a/site/training/assets/slides.scss
+++ b/site/training/assets/slides.scss
@@ -171,10 +171,13 @@ section.has-dark-background a:hover {
 }
 
 .reveal .slide .smallercaps {
-  font-weight: bold;
+  font-weight: normal;
   font-size: smaller;
   font-variant: small-caps;
   position: relative;
   top: -5px;
 }
 
+.reveal .slide .pink {
+  color: #DE257E;
+}
