--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -148,6 +148,15 @@ nav#TOC .toc-actions ul li a.toc-action {
   text-decoration: underline;
 }
 
+/* Tabset nav-link styles */
+.panel-tabset .nav-link.active {
+  color: #DE257E !important;
+}
+
+.panel-tabset .nav-link:not(.active) {
+  color: #222425 !important;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
   .dropdown-item {
