Attempt a fix at transparency issue in callouts

--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -151,10 +151,22 @@ nav#TOC .toc-actions ul li a.toc-action {
 /* Tabset nav-link styles */
 .panel-tabset .nav-link.active {
   color: #DE257E !important;
+  background-color: transparent !important;
 }
 
 .panel-tabset .nav-link:not(.active) {
   color: #222425 !important;
+  background-color: transparent;
+}
+
+.panel-tabset .nav-tabs .nav-link {
+  border-radius: 4px 4px 0 0;
+  background-color: transparent;
+}
+
+.panel-tabset .tab-content {
+  border-radius: 0 0 4px 4px;
+  background-color: transparent;
 }
 
 /* Responsive styles */
