--- a/site/assets/styles/_callouts.scss
+++ b/site/assets/styles/_callouts.scss
@@ -4,25 +4,32 @@
   display: inline-block !important;
   width: fit-content !important;
   max-width: 100%;
+  background: var(--quarto-body-bg);
 }
 
 .callout-button > .callout {
   display: inline-block !important;
   width: fit-content !important;
   max-width: 100%;
+  background: var(--quarto-body-bg);
 }
 
 .callout-button > .callout.callout-style-simple {
   display: inline-flex !important;
   flex-direction: column;
+  background: var(--quarto-body-bg);
 }
 
 .callout-button .callout .callout-header {
   display: inline-block !important;
   width: fit-content;
+  margin-top: 0.25rem;
+  background: var(--quarto-body-bg);
 }
 
 .callout-button .callout .callout-title-container {
   display: inline-block !important;
   text-align: left;
+  margin-right: 2rem !important;
+  background: var(--quarto-body-bg);
 }
