--- a/site/training/ai-governance/slides.scss
+++ b/site/training/ai-governance/slides.scss
@@ -4,12 +4,11 @@
 // Import fonts
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
+/*-- scss:rules --*/
+
 .reveal {
   font-family: 'Inter', sans-serif;
 }
-
-/*-- scss:defaults --*/
-$link-color: #3E6C69;
 
 .reveal #title-slide .quarto-title-authors {
   margin-left: 0;
@@ -31,8 +30,8 @@ $link-color: #3E6C69;
   font-weight: bold;
   line-height: 0.8;
   transform: skew(-20deg);
-  text-decoration: underline;
-  text-decoration-color: #DE257E;
+  // text-decoration: underline;
+  // text-decoration-color: #DE257E;
   box-shadow: 
     10px 10px 20px rgba(0, 0, 0, 0.3),
     6px 6px 10px rgba(0, 0, 0, 0.2),
@@ -49,9 +48,12 @@ $link-color: #3E6C69;
   // color: white;
   margin-left: 0;
   display: inline-block;
-  background: #white;
+  background: #fff;
   padding: 10px 30px;
   border-radius: 5px;
+  opacity: 0.8;
+  mask-image: linear-gradient(to right, transparent, black 10px, black calc(100% - 30px), transparent);
+  -webkit-mask-image: linear-gradient(to right, transparent, black 10px, black calc(100% - 30px), transparent);
 }
 
 .reveal .slide-logo {
@@ -59,7 +61,7 @@ $link-color: #3E6C69;
   position: absolute;
   top: 0;
   left: 0;
-  margin: 0;
+  margin: 20px 0 0 0;
   z-index: 1000;
   width: 99px !important;
   height: 71px !important;
@@ -79,103 +81,16 @@ $link-color: #3E6C69;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   }
 
-.reveal .slide .button {
-    color: #3E6C69;
-    background-color: #white;
-    text-decoration: none;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    margin-bottom: 0.5rem;
-    display: inline-block;
-    border-radius: 4px;
-    border: 1px solid #3E6C69;
-    transition: color 0.15s ease-in, background-color 0.15s ease-in;
-    font-weight: bold;
-    text-align: center;
-    font-size: 32px;
-  }
-
-  .reveal .slides section .fragment.blur {
-    filter: blur(5px);
-  }
-  
-  .reveal .slides section .fragment.blur.visible {
-    filter: none
-  }
-
-.reveal .slide .button:hover {
-    text-decoration: none;
-    filter: brightness(125%);
-  }
-
-.reveal .slide .overlay, .reveal .footer .overlay {
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
-  border: 1px solid #083E44;
-  // border-left-width: 5px;
-  background: #FAFAFA;
-  border-radius: 5px;
-  color: #222222;
+.reveal .slides section .fragment.blur {
+  filter: blur(5px);
 }
 
-.reveal .slide .embed {
-  border: 1px solid #042426;
-  background: #EAF8FA;
-  border-radius: 5px;
-}
-
-.reveal .footer a {
-  color: #DE257E !important;
-}
-
-.reveal .progress {
-  color: #DE257E !important;
-}
-
-.reveal .slide-menu-br {
-  background-color: #EAF8FA;
-  padding: 3px;
-  border-radius: 3px;
-  margin-bottom: 5px;
-}
-
-.reveal .slide .green-bg {
-  background-color: #bbe1afff;
-  padding: 5px;
-  border-radius: 3px;
-  color: #0f3b02ff;
-  font-size: smaller;
+.reveal .slides section .fragment.blur.visible {
+  filter: none
 }
 
 .reveal .slide .green {
   color: #083E44;
-}
-
-.reveal .slide .bubble, .reveal .footer .bubble {
-  border: 1px solid #042426;
-  color: #042426;
-  padding: 5px;
-  border-radius: 25px;
-  font-size: smaller;
-  line-height: 2.5em;
-}
-
-.reveal code {
-  color: #DE257E !important;
-}
-
-.reveal .slide h4 {
-  color: #083E44; 
-}
-
-.reveal .slide h5 {
-  color: #083E44; 
-  font-weight: normal;
-}
-
-.reveal .slide figcaption {
-  text-align: center;
 }
 
 .highlight {
@@ -194,14 +109,6 @@ $link-color: #3E6C69;
 //   line-height: 1.5;
 //   padding-bottom: 1.5rem
 // }
-
-.slide-menu-wrapper .slide-menu {
-  background-color: #042426 !important
-}
-
-.slide-menu-wrapper .active-menu-panel li.selected {
-  background-color: #DE257E !important
-}
 
 .reveal .screenshot {
   border: 1px solid #083E44;
@@ -226,11 +133,6 @@ $link-color: #3E6C69;
 .playback {
   transform: translate(50px, 10px);
   position: relative;
-}
-
-.reveal section.has-dark-background a, 
-section.has-dark-background a:hover {
-    color: #ffffff !important;
 }
 
 .reveal .sourceCode {
