--- a/site/training/ai-governance/slides.scss
+++ b/site/training/ai-governance/slides.scss
@@ -52,8 +52,14 @@
   padding: 10px 30px;
   border-radius: 5px;
   opacity: 0.8;
-  mask-image: linear-gradient(to right, transparent, black 10px, black calc(100% - 30px), transparent);
-  -webkit-mask-image: linear-gradient(to right, transparent, black 10px, black calc(100% - 30px), transparent);
+  mask-image: 
+    linear-gradient(to right, transparent, black 10px, black calc(100% - 30px), transparent),
+    linear-gradient(to bottom, transparent, black 10px, black calc(100% - 10px), transparent);
+  -webkit-mask-image: 
+    linear-gradient(to right, transparent, black 10px, black calc(100% - 30px), transparent),
+    linear-gradient(to bottom, transparent, black 10px, black calc(100% - 10px), transparent);
+  mask-composite: intersect;
+  -webkit-mask-composite: source-in;
 }
 
 .reveal .slide-logo {
