Style + instruction edits

--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -169,6 +169,16 @@ nav#TOC .toc-actions ul li a.toc-action {
   background-color: transparent;
 }
 
+/* active tab underline */
+.panel-tabset .nav-tabs .nav-link.active,
+.panel-tabset .nav-tabs .nav-item.show .nav-link {
+  color: #DE257E !important;
+  background-color: transparent !important;
+
+  /* static full-width underline */
+  box-shadow: inset 0 -1px 0 #DE257E;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
   .dropdown-item {
