--- a/site/assets/styles/_callouts.scss
+++ b/site/assets/styles/_callouts.scss
@@ -18,6 +18,9 @@
   display: inline-flex !important;
   flex-direction: column;
   background: var(--quarto-body-bg);
+  border: 1px solid #de257e;
+  border-left-width: 3px;
+  background: white;
 }
 
 .callout-button .callout .callout-header {
@@ -32,4 +35,34 @@
   text-align: left;
   margin-right: 2rem !important;
   background: var(--quarto-body-bg);
+  color: #de257e;
+}
+
+/* Most robust: recolor the chevron via mask */
+.callout-button .callout-btn-toggle .callout-toggle::before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='%23de257e'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+}
+
+.callout-button h2 {
+  font-size: 1.25rem;
+}
+
+.embed-tip {
+  border: 1px solid #083E44;
+  background: #FAFBFB;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 8px;
+  margin: 0 1rem;
+}
+
+.embed-tip h3 {
+  font-size: 1rem;
+  color: #073E44;
+}
+
+.small-text {
+  font-size: .75rem;
+  opacity: .7;
 }
