Nrichers/sc 13410/documentation use custom fields in model (#1074)
* Move callout for lazy readers, minor edit

* Initial topic updates

* Move shared file to match our de facto convention, fix typo, add margin links

* Break filter content out into its own topic

* Experiment with buttons

* Edits, edits, edits

* Add more imbed examples for the review

* Lots more edits

* Edits

* Edits

* Text edits

* Minor text tweaks

* Formatting tweaks

* Add .callout-button styles

* Fix active/inactive tabset text colors

* Split steps in examples

* Attempt a fix at transparency issue in callouts

* Formatting tweaks

* Remove YAML header

* Address review feedback

* Add wrapper topic for help links from the UI

* Move select your filters files into shared/ folder

* Style + instruction edits

* Undo file rename & move images

---------

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -148,6 +148,37 @@ nav#TOC .toc-actions ul li a.toc-action {
   text-decoration: underline;
 }
 
+/* Tabset nav-link styles */
+.panel-tabset .nav-link.active {
+  color: #DE257E !important;
+  background-color: transparent !important;
+}
+
+.panel-tabset .nav-link:not(.active) {
+  color: #222425 !important;
+  background-color: transparent;
+}
+
+.panel-tabset .nav-tabs .nav-link {
+  border-radius: 4px 4px 0 0;
+  background-color: transparent;
+}
+
+.panel-tabset .tab-content {
+  border-radius: 0 0 4px 4px;
+  background-color: transparent;
+}
+
+/* active tab underline */
+.panel-tabset .nav-tabs .nav-link.active,
+.panel-tabset .nav-tabs .nav-item.show .nav-link {
+  color: #DE257E !important;
+  background-color: transparent !important;
+
+  /* static full-width underline */
+  box-shadow: inset 0 -1px 0 #DE257E;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
   .dropdown-item {
