Rough in new look

--- a/site/training/assets/use-cases.scss
+++ b/site/training/assets/use-cases.scss
@@ -44,15 +44,14 @@
 }
 
 .reveal #title-slide .subtitle {
-  font-variant: small-caps;
   color: black;
   -webkit-text-stroke: 5px white;
-  text-stroke: 5px white;
   paint-order: stroke fill;
   position: relative;
   display: inline-block;
   padding: 10px 30px;
   font-variant: small-caps;
+  text-shadow: 0 2px 12px rgba(0,0,0,0.18), 0 1.5px 4px rgba(0,0,0,0.10);
 }
 
 .reveal #title-slide .subtitle::before {
@@ -179,12 +178,12 @@
   border-bottom-width: 3px;
 }
 
-.reveal hr {
-  border: 0;
-  border-top: 2px solid #DE257E;
-  height: 0;
-  margin: 20px 0;
-}
+// .reveal hr {
+//   border: 0;
+//   border-top: 2px solid #DE257E;
+//   height: 0;
+//   margin: 20px 0;
+// }
 
 .reveal .controls[data-controls-layout="bottom-right"] {
   bottom: 0px;
@@ -353,5 +352,11 @@
 
 .reveal .slide h2 {
   color: #DE257E; 
+}
+
+.reveal .nt6 p,
+.reveal .nt6 figure {
+  margin: 0;
+  line-height: 1;
 }
 
