Add tilt effect, edits

--- a/site/training/assets/use-cases.scss
+++ b/site/training/assets/use-cases.scss
@@ -360,3 +360,16 @@
   line-height: 1;
 }
 
+.tilt-wrap {
+  perspective: 1000px;
+}
+
+.tilt-left {
+  transform: perspective(1200px) rotateY(-12deg);
+  transform-style: preserve-3d;
+}
+
+.tilt-right {
+  transform: perspective(1200px) rotateY(12deg);
+  transform-style: preserve-3d;
+}
