Edits, change .bg-dark-green to dark teal

--- a/site/training/assets/use-cases.scss
+++ b/site/training/assets/use-cases.scss
@@ -373,3 +373,7 @@
   transform: perspective(1200px) rotateY(12deg);
   transform-style: preserve-3d;
 }
+
+.bg-dark-green {
+  background-color: #083E44;
+}
