Edits, add more images

--- a/site/training/assets/use-cases.scss
+++ b/site/training/assets/use-cases.scss
@@ -377,3 +377,32 @@
 .bg-dark-green {
   background-color: #083E44;
 }
+
+.round-feather {
+  width: fit-content;
+  height: fit-content;
+  padding: 20px;            /* gives the feather room to fade */
+  border-radius: 50%;
+  overflow: visible;
+
+  -webkit-mask-image: radial-gradient(
+    circle,
+    black calc(100% - 20px),
+    transparent 100%
+  );
+  mask-image: radial-gradient(
+    circle,
+    black calc(100% - 20px),
+    transparent 100%
+  );
+
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+}
+
+.round-feather img {
+  display: block;
+  border-radius: 50%;
+}
