--- a/site/training/assets/slides.scss
+++ b/site/training/assets/slides.scss
@@ -198,7 +198,7 @@ section.has-dark-background a:hover {
   border-radius: 4px;
   color: white;
   cursor: pointer;
-  vertical-align: middle;
+  vertical-align: baseline;
   font-size: 11px;
   font-weight: 500;
   letter-spacing: 0.02em;
