Edits, update dark pink colour to VM colour

--- a/site/training/assets/use-cases.scss
+++ b/site/training/assets/use-cases.scss
@@ -378,6 +378,11 @@
   background-color: #083E44;
 }
 
+.bg-dark-pink {
+  background-color: #DE257E;
+}
+
+
 .round-feather {
   width: fit-content;
   height: fit-content;
