--- a/site/training/assets/slides.scss
+++ b/site/training/assets/slides.scss
@@ -86,7 +86,7 @@ section.has-dark-background a:hover {
   color: green;
 }
 
-.reveal .slide .bubble, .reveal .footer .bubble {
+.reveal .slide .bubble, .reveal .footer .bubble, .slideover__content-area .bubble {
   border: 1px solid #042426;
   color: #042426;
   padding: 5px;
