--- a/site/training/ai-governance/slides.scss
+++ b/site/training/ai-governance/slides.scss
@@ -44,7 +44,6 @@
 }
 
 .reveal #title-slide .subtitle {
-  font-variant: small-caps;
   color: black;
   -webkit-text-stroke: 5px white;
   text-stroke: 5px white;
@@ -52,7 +51,7 @@
   position: relative;
   display: inline-block;
   padding: 10px 30px;
-  font-variant: small-caps;
+  font-weight: bold;
 }
 
 .reveal #title-slide .subtitle::before {
