--- a/site/training/assets/use-cases.scss
+++ b/site/training/assets/use-cases.scss
@@ -50,8 +50,8 @@
   position: relative;
   display: inline-block;
   padding: 10px 30px;
-  font-variant: small-caps;
   text-shadow: 0 2px 12px rgba(0,0,0,0.18), 0 1.5px 4px rgba(0,0,0,0.10);
+  font-weight: bold;
 }
 
 .reveal #title-slide .subtitle::before {
