Apply title slide background to other transition slides

--- a/site/training/assets/use-cases.scss
+++ b/site/training/assets/use-cases.scss
@@ -43,18 +43,20 @@
   transform: skew(20deg);
 }
 
-.reveal #title-slide .subtitle {
+.reveal #title-slide .subtitle,
+.reveal .title-slide h1 {
   color: black;
   -webkit-text-stroke: 5px white;
   paint-order: stroke fill;
   position: relative;
-  display: inline-block;
+  // display: inline-block;
   padding: 10px 30px;
   text-shadow: 0 2px 12px rgba(0,0,0,0.18), 0 1.5px 4px rgba(0,0,0,0.10);
   font-weight: bold;
 }
 
-.reveal #title-slide .subtitle::before {
+.reveal #title-slide .subtitle::before,
+.reveal .title-slide h1::before {
   content: "";
   position: absolute;
 
